--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="file.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="Srilekhababu-Resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
