--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="9dccebb4-633b-42e4-b203-d23ec20f0ce2.jpeg" alt="Your Profile Picture" class="profile-picture">
             <h1>Srilekha Babu</h1></h1>
             <p>Am Computer Science</p>
         </div>
